--- a/resources/analyze.html
+++ b/resources/analyze.html
@@ -547,7 +547,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button id="btnDeleteDataFromModel" type="button" class="btn btn-primary">Delete data</button>
+            <button id="btnDeleteDataFromModel" type="button" class="btn btn-danger">Delete data</button>
           </div>
         </div>
       </div>
