- added a website fork

--- a/resources/main.html
+++ b/resources/main.html
@@ -117,7 +117,7 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 hide" id="server">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 
           <h2>Analyze your <span style="font-variant:small-caps;">Tida</span></h2>
@@ -126,6 +126,17 @@
             your data and start to analyze it. See a sample user-interface, useful to manage the server.</p>
 
           <p><a class="btn btn-lg btn-primary btn-block" href="login.html" role="button">Server</a></p>
+        </div>
+
+        <div class="col-lg-4 hide" id="download">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+
+          <h2>Analyze your <span style="font-variant:small-caps;">Tida</span></h2>
+
+          <p>Download your version of the <span style="font-variant:small-caps;">TidaIs</span>.<br/>Get started with the
+            examples, define your model, load data into it, and start to analyze. Understand your time interval data and gain new insights.</p>
+
+          <p><a class="btn btn-lg btn-primary btn-block" href="download.html" role="button">Download</a></p>
         </div>
 
         <div class="col-lg-4">
