- smaller changed for website

--- a/resources/docs.html
+++ b/resources/docs.html
@@ -32,6 +32,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="main.html">Home</a></li>
+            <li data-session="notneeded"><a href="download.html">Download</a></li>
             <li data-session="needed"><a href="analyze.html">Server</a></li>
             <li data-session="needed"><a href="#" data-toggle="modal" data-target="#modalLogout">Logout</a></li>
             <li class="dropdown" data-session="needed">
