--- a/resources/download.html
+++ b/resources/download.html
@@ -17,5 +17,28 @@
   </head>
   <body data-page="download" data-type="global">
 
+    <!-- navigation bar -->
+    <nav id="navbarMain" class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><span style="font-variant:small-caps;">TidaUI</span></a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="main.html">Home</a></li>
+            <li data-session="needed"><a href="docs.html">Documentation</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+    <a id="hrefDownload" href="downloads/tidais-TRUNK-SNAPSHOT.zip">Download</a>
   </body>
 </html>
