- first version of download

--- a/resources/download.html
+++ b/resources/download.html
@@ -38,7 +38,24 @@
       </div>
     </nav>
 
+    <div class="container theme-showcase" role="main">
 
-    <a id="hrefDownload" href="downloads/tidais-TRUNK-SNAPSHOT.zip">Download</a>
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1>Download <span style="font-variant:small-caps;">TidaIs</span></h1>
+
+        <p>Download the basis package of the Time Interval Data Analysis Information System. Follow the first steps to
+          get started and learn how to use the basis package, how to configure your model, and how to modify the system
+          to your specific needs.</p>
+
+        <p>
+          <button id="btnDownload" type="button" class="btn btn-success btn-lg btn-block">Download</button>
+        </p>
+      </div>
+
+
+    </div>
+
+
   </body>
 </html>
