- added some text

--- a/resources/download.html
+++ b/resources/download.html
@@ -45,7 +45,7 @@
         <h1>Download <span style="font-variant:small-caps;">TidaIs</span></h1>
 
         <p>Download the basis package of the Time Interval Data Analysis Information System. Follow the first steps to
-          get started and learn how to use the basis package, how to configure your model, and how to modify the system
+          get started and learn how to use the system, how to configure your model, and how to modify the implementation
           to your specific needs.</p>
 
         <p>
@@ -53,9 +53,26 @@
         </p>
       </div>
 
+      <div class="page-header">
+        <h1>Getting Started!
+          <small>System Requirements, Download, Unzip, and Setup</small>
+        </h1>
+      </div>
+      <p>The system needs a <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Runtime
+        Environment (JRE) 1.6 or higher</a> installed on the system. Fulfilling this requirement, there are only a
+        couple of simple steps to be performed: download, unzip, and start.</p>
 
+
+
+      <!-- FOOTER -->
+      <p>&nbsp;</p>
+      <hr />
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+
+        <p>© 2015 Philipp Meisen · <a href="https://github.com/pmeisen/dis-timeintervaldataanalyzer" target="_blank">Source
+          Code</a> · <a href="#">License</a></p>
+      </footer>
     </div>
-
-
   </body>
 </html>
