--- a/resources/download.html
+++ b/resources/download.html
@@ -71,7 +71,7 @@
         <p class="pull-right"><a href="#">Back to top</a></p>
 
         <p>© 2015 Philipp Meisen · <a href="https://github.com/pmeisen/dis-timeintervaldataanalyzer" target="_blank">Source
-          Code</a> · <a href="#">License</a></p>
+          Code</a> · <a data-toggle="modal" data-toggle="modal" data-target="#modalLicense" href="#">License</a></p>
       </footer>
     </div>
   </body>
