--- a/resources/main.html
+++ b/resources/main.html
@@ -57,47 +57,60 @@
         <li data-target="#carousel" data-slide-to="0" class="active"></li>
         <li data-target="#carousel" data-slide-to="1" class=""></li>
         <li data-target="#carousel" data-slide-to="2" class=""></li>
+        <li data-target="#carousel" data-slide-to="3" class=""></li>
       </ol>
       <div class="carousel-inner" role="listbox">
+
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Get Started">
 
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
+              <h1>Get Started: Download, Unzip, and Ready to Go</h1>
 
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon
-                buttons on the left and right might not load/display properly due to web browser security rules.</p>
-
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p>It is easy as this. Download the <span style="font-variant:small-caps;">TidaIs</span> package, unzip
+                it, and get started.<br/>Watch the tutorial videos and get more and more insights, step by step.</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Fast Integration">
 
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
+              <h1>Fast Integration</h1>
 
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p>Insert millions of time interval records into the system. Use a data integration tool, the provided
+                front-end, or pump the records directly into the system through the available interfaces.<br/> With a
+                speed with up an average of 10,000 records per seconds there is no limit. </p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Intuitive Query Language">
 
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
+              <h1>Intuitive Query Language</h1>
 
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p>Use the easy to learn <span style="font-variant:small-caps;">TidaQl</span> to formalize your questions
+                to your data.<br/>Illustrate the results with the available
+                <span style="font-variant:small-caps;">TidaUi</span>, use your favorite tool (e.g., Tableau&copy;) or
+                develop your own visualization.<br/>Thanks to the provided JDBC driver you can query the system from
+                almost any application.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="fourth-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Complex Data">
 
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Support of Complex Data Structures, Dimensional Models, and<br/>many-to-many Relationships</h1>
+
+              <p>Supporting any kind of dimensions and complex data structures. No extra effort to overcome any
+                summarizability problems. Insert your business data as it is given to you, specifying the descriptive
+                information needed for analytics.</p>
             </div>
           </div>
         </div>
@@ -134,7 +147,8 @@
           <h2>Analyze your <span style="font-variant:small-caps;">Tida</span></h2>
 
           <p>Download your version of the <span style="font-variant:small-caps;">TidaIs</span>.<br/>Get started with the
-            examples, define your model, load data into it, and start to analyze. Understand your time interval data and gain new insights.</p>
+            examples, define your model, load data into it, and start to analyze. Understand your time interval data and
+            gain new insights.</p>
 
           <p><a class="btn btn-lg btn-primary btn-block" href="download.html" role="button">Download</a></p>
         </div>
@@ -169,7 +183,7 @@
         <p class="pull-right"><a href="#">Back to top</a></p>
 
         <p>© 2015 Philipp Meisen · <a href="https://github.com/pmeisen/dis-timeintervaldataanalyzer" target="_blank">Source
-          Code</a> · <a href="#">License</a></p>
+          Code</a> · <a data-toggle="modal" data-toggle="modal" data-target="#modalLicense" href="#">License</a></p>
       </footer>
     </div>
   </body>
