- changed some buttons for smaller devices

--- a/resources/download.html
+++ b/resources/download.html
@@ -59,14 +59,13 @@
         </h1>
       </div>
       <p>The system needs a <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Runtime
-        Environment (JRE) 1.6 or higher</a> installed on the system. Fulfilling this requirement, there are only a
+        Environment (JRE) 1.6 or higher</a> installed. Fulfilling this requirement, there are only a
         couple of simple steps to be performed: download, unzip, and start.</p>
-
 
 
       <!-- FOOTER -->
       <p>&nbsp;</p>
-      <hr />
+      <hr/>
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
 
