--- a/resources/main.html
+++ b/resources/main.html
@@ -35,6 +35,9 @@
 
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
+                <li data-website="needed"><a href="download.html">Download</a></li>
+                <li data-session="needed"><a href="analyze.html">Server</a></li>
+                <li data-session="needed"><a href="docs.html">Documentation</a></li>
                 <li data-session="needed"><a href="#" data-toggle="modal" data-target="#modalLogout">Logout</a></li>
                 <li class="dropdown" data-session="needed">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="caret"></span></a>
@@ -66,7 +69,7 @@
 
           <div class="container">
             <div class="carousel-caption">
-              <h1>Get Started: Download, Unzip, and Ready to Go</h1>
+              <h1>Get Started: Download, Unzip, and Go</h1>
 
               <p>It is easy as this. Download the <span style="font-variant:small-caps;">TidaIs</span> package, unzip
                 it, and get started.<br/>Watch the tutorial videos and get more and more insights, step by step.</p>
@@ -80,9 +83,9 @@
             <div class="carousel-caption">
               <h1>Fast Integration</h1>
 
-              <p>Insert millions of time interval records into the system. Use a data integration tool, the provided
+              <p>Insert millions of time interval records. Use a data integration tool, the provided
                 front-end, or pump the records directly into the system through the available interfaces.<br/> With a
-                speed with up an average of 10,000 records per seconds there is no limit. </p>
+                speed being in average between 10,000 and 20,000 records per seconds there is no limit. </p>
             </div>
           </div>
         </div>
@@ -94,7 +97,7 @@
               <h1>Intuitive Query Language</h1>
 
               <p>Use the easy to learn <span style="font-variant:small-caps;">TidaQl</span> to formalize your questions
-                to your data.<br/>Illustrate the results with the available
+                to be answered by your data.<br/>Illustrate the results with the available
                 <span style="font-variant:small-caps;">TidaUi</span>, use your favorite tool (e.g., Tableau&copy;) or
                 develop your own visualization.<br/>Thanks to the provided JDBC driver you can query the system from
                 almost any application.</p>
@@ -106,11 +109,11 @@
 
           <div class="container">
             <div class="carousel-caption">
-              <h1>Support of Complex Data Structures, Dimensional Models, and<br/>many-to-many Relationships</h1>
+              <h1>Support of Complex Data Structures</h1>
 
-              <p>Supporting any kind of dimensions and complex data structures. No extra effort to overcome any
-                summarizability problems. Insert your business data as it is given to you, specifying the descriptive
-                information needed for analytics.</p>
+              <p>Supporting any kind of dimensions and data structures. No extra effort to overcome any
+                summarizability problems. Insert your business data as it is given to you, by specifying the descriptive
+                information and start analysing it.</p>
             </div>
           </div>
         </div>
