- documentation is always shown

--- a/resources/main.html
+++ b/resources/main.html
@@ -37,7 +37,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li data-website="needed"><a href="download.html">Download</a></li>
                 <li data-session="needed"><a href="analyze.html">Server</a></li>
-                <li data-session="needed"><a href="docs.html">Documentation</a></li>
+                <li><a href="docs.html">Documentation</a></li>
                 <li data-session="needed"><a href="#" data-toggle="modal" data-target="#modalLogout">Logout</a></li>
                 <li class="dropdown" data-session="needed">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="caret"></span></a>
