--- a/resources/download.html
+++ b/resources/download.html
@@ -58,10 +58,20 @@
           <small>System Requirements, Download, Unzip, and Setup</small>
         </h1>
       </div>
-      <p>The system needs a <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Runtime
+      <p>The system needs a <a target="_blank" href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Runtime
         Environment (JRE) 1.6 or higher</a> installed. Fulfilling this requirement, there are only a
         couple of simple steps to be performed: download, unzip, and start.</p>
 
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+
+        <!-- poster	URL	Specifies an image to be shown while the video is downloading, or until the user hits the play button -->
+        <video class="embed-responsive-item" controls>
+          <source src="mp4/video.ogv" type="video/ogg">
+          <source src="mp4/video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
 
       <!-- FOOTER -->
       <p>&nbsp;</p>
