--- a/resources/download.html
+++ b/resources/download.html
@@ -58,9 +58,12 @@
           <small>System Requirements, Download, Unzip, and Setup</small>
         </h1>
       </div>
-      <p>The system needs a <a target="_blank" href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Runtime
-        Environment (JRE) 1.6 or higher</a> installed. Fulfilling this requirement, there are only a
-        couple of simple steps to be performed: download, unzip, and start.</p>
+      <p>The system needs a
+        <a target="_blank" href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Runtime
+          Environment (JRE) 1.6 or higher</a> installed. Fulfilling this requirement, there are only a couple of simple
+        steps to be performed: download, unzip, and start. Have a look at the following short video and learn how to get
+        started. Afterwards, you should start following the tutorials presented in the
+        <a href="docs.html">Documentation</a> section.</p>
 
       <!-- 16:9 aspect ratio -->
       <div class="embed-responsive embed-responsive-16by9">
