--- a/resources/download.html
+++ b/resources/download.html
@@ -70,8 +70,8 @@
 
         <!-- poster	URL	Specifies an image to be shown while the video is downloading, or until the user hits the play button -->
         <video class="embed-responsive-item" controls>
-          <source src="mp4/video.ogv" type="video/ogg">
-          <source src="mp4/video.mp4" type="video/mp4">
+          <source src="vids/gettingStarted.ogv" type="video/ogg">
+          <source src="vids/gettingStarted.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
