--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
     <title>TidaIs - Login</title>
 
     <link href="css/reset.css" rel="stylesheet">
-    <link href="scripts/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/ui.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
 
