--- a/public/analyze.html
+++ b/public/analyze.html
@@ -9,8 +9,8 @@
     <title>TidaIs - Analyze</title>
 
     <link href="css/reset.css" rel="stylesheet">
-    <link href="scripts/css/bootstrap.css" rel="stylesheet">
-    <link href="scripts/css/bootstrap-colorpicker.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-colorpicker.css" rel="stylesheet">
     <link href="css/ui.css" rel="stylesheet">
     <link href="css/analyze.css" rel="stylesheet">
 
