--- a/public/docs.html
+++ b/public/docs.html
@@ -9,7 +9,7 @@
     <title>TidaIs - Documentation</title>
 
     <link href="css/reset.css" rel="stylesheet">
-    <link href="scripts/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/ui.css" rel="stylesheet">
     <link href="css/docs.css" rel="stylesheet">
 
