--- a/public/error.html
+++ b/public/error.html
@@ -9,7 +9,7 @@
     <title>Error</title>
 
     <link href="css/reset.css" rel="stylesheet">
-    <link href="scripts/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/ui.css" rel="stylesheet">
 
     <script data-main="scripts/net/meisen/dissertation/ui/app/App" src="scripts/require.js" type="text/javascript"></script>
