--- a/public/logout.html
+++ b/public/logout.html
@@ -9,7 +9,7 @@
     <title>TidaIs - Logout</title>
 
     <link href="css/reset.css" rel="stylesheet">
-    <link href="scripts/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/ui.css" rel="stylesheet">
     <link href="css/logout.css" rel="stylesheet">
 
