--- a/public/main.html
+++ b/public/main.html
@@ -9,7 +9,7 @@
     <title>TidaIs - Welcome</title>
 
     <link href="css/reset.css" rel="stylesheet">
-    <link href="scripts/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/ui.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
