added a wrapping possibility

--- a/public/download.html
+++ b/public/download.html
@@ -13,7 +13,7 @@
     <link href="css/ui.css" rel="stylesheet">
     <link href="css/download.css" rel="stylesheet">
 
-    <script data-main="scripts/net/meisen/dissertation/ui/app/App" src="scripts/require.js" type="text/javascript"></script>
+    @@script-injection
   </head>
   <body data-page="download" data-type="global">
 
