--- a/public/analyze.html
+++ b/public/analyze.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TidaIs - Analyze</title>
+    <title>TidaIs</title>
 
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     <link href="css/ui.css" rel="stylesheet">
     <link href="css/analyze.css" rel="stylesheet">
 
-    <script data-main="scripts/net/meisen/dissertation/ui/app/App" src="scripts/require.js" type="text/javascript"></script>
+    @@script-injection
   </head>
   <body data-page="analyze" data-type="session">
 
