--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/ui.css" rel="stylesheet">
 
-    <script data-main="scripts/net/meisen/dissertation/ui/app/App" src="scripts/require.js" type="text/javascript"></script>
+    @@script-injection
   </head>
   <body data-page="index" data-type="global">
 
