Add display of count result

--- a/public/analyze.html
+++ b/public/analyze.html
@@ -291,6 +291,7 @@
 
         <div id="highcharts" class="chart hide"></div>
         <div id="ganttcharts" class="chart hide"></div>
+        <div id="textoutputmeike" class="chart hide"></div>
       </div>
     </div>
 
